--- a/FLIGHT_MANAGEMENT_SYSTEM_MIDDLEWARE/FMSCustomerMicroService/src/main/resources/application.properties
+++ b/FLIGHT_MANAGEMENT_SYSTEM_MIDDLEWARE/FMSCustomerMicroService/src/main/resources/application.properties
@@ -1,17 +1,17 @@
-spring.application.name=fms-customer
-server.port=7001
-
-
-#Eureka Config
-eureka.client.region = default
-eureka.client.registryFetchIntervalSeconds = 5
-eureka.client.serviceUrl.defaultZone=http://localhost:7003/eureka/
-
-#Database 1
-spring.datasource.url = jdbc:oracle:thin:@localhost:1521:xe
-spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
-spring.datasource.username = system
-spring.datasource.password = yagyesh03
-spring.jpa.show-sql = true
-spring.jpa.hibernate.ddl-auto = update
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.Oracle10gDialect
+#spring.application.name=fms-customer
+#server.port=7001
+#
+#
+##Eureka Config
+#eureka.client.region = default
+#eureka.client.registryFetchIntervalSeconds = 5
+#eureka.client.serviceUrl.defaultZone=http://localhost:7003/eureka/
+#
+##Database 1
+#spring.datasource.url = jdbc:oracle:thin:@localhost:1521:xe
+#spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
+#spring.datasource.username = system
+#spring.datasource.password = yagyesh03
+#spring.jpa.show-sql = true
+#spring.jpa.hibernate.ddl-auto = update
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.Oracle10gDialect
